--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
-language: ruby
-rvm:
-  - 2.4.1
-script:
-  - bundle exec rspec spec/
+matrix:
+  include:
+    - language: ruby
+      rvm:
+        - 2.4.1
+      script:
+        - bundle exec rspec spec/
