--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,6 @@ matrix:
         - node --version
         - npm --version
         - node_modules/.bin/newman --version
+        - ruby tic_tac_toe_web.rb&
       script:
         - node_modules/.bin/newman run postman/tests.postman_collection.json
