add tic_tac_toe_rz gem to install list

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ matrix:
         - npm install newman
         - gem install sinatra
         - gem install sinatra-contrib
+        - gem install tic_tac_toe_rz
       before_script:
         - node --version
         - npm --version
