Added tic_tac_toe_rz gem install command for rspec tests to get latest version

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ matrix:
     - language: ruby
       rvm:
         - 2.4.4
+      install:
+        - gem install tic_tac_toe_rz
       script:
         - bundle exec rspec spec/
 
